# iNTUition_2026

./: README.md
backend/: .env  ai_processor.py  config.py  main.py  pyproject.toml  run.py  screenshot_utils.py  test_api.py  voice_processor.py
frontend/a11y-extension/: background.js  content.js  help.html  manifest.json  popup.css  popup.html  popup.js  welcome.html  widget.css
